# make-com-cli

./: .gitignore  README.md  SKILL.md  pyproject.toml
DOCS/: architecture.md
core/: config.py  output.py
make.com-manage-orgs-mcp/: SKILL.md
make_cli/: __main__.py  cli.py  context.py
make_cli/commands/: analyze.py  apps.py  config_cmd.py  connections.py  credentials.py  datastores.py  datastructures.py  executions.py  folders.py  functions.py  hooks.py  keys.py  orgs.py  repl.py  scenarios.py  sync.py  teams.py  tools.py  users.py  validate.py
utils/: make_backend.py
