[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "make-cli"
version = "0.1.0"
description = "CLI for Make.com automation platform"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "pyyaml>=6.0",
]

[project.scripts]
make-cli = "make_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["make_cli*", "core*", "utils*"]
